--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.28.0"
+    "@symfony/webpack-encore": "^0.28.0",
+    "webpack-notifier": "^1.6.0"
   }
 }
