--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@symfony/webpack-encore": "^0.28.0",
+    "bootstrap": "3",
     "jquery": "^3.4.1",
     "sweetalert2": "^8.17.6",
     "webpack-notifier": "^1.6.0"
