--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@symfony/webpack-encore": "^0.28.0",
     "bootstrap": "3",
+    "font-awesome": "4",
     "jquery": "^3.4.1",
     "sweetalert2": "^8.17.6",
     "webpack-notifier": "^1.6.0"
