--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
     "sass-loader": "^7.0.1",
     "sweetalert2": "^8.17.6",
     "webpack-notifier": "^1.6.0"
+  },
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production"
   }
 }
